Seed for users and books for database add, basic index.cshtml reworked, changed title in other pages, basic index.cshtml shows options for books

--- a/BookBorrowManagement/Pages/Books/Delete.cshtml
+++ b/BookBorrowManagement/Pages/Books/Delete.cshtml
@@ -2,10 +2,10 @@
 @model BookBorrowManagement.Pages.Books.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Book";
 }
 
-<h1>Delete</h1>
+<h1>Delete Book</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
