--- a/BookBorrowManagement/Pages/Books/Edit.cshtml
+++ b/BookBorrowManagement/Pages/Books/Edit.cshtml
@@ -2,10 +2,10 @@
 @model BookBorrowManagement.Pages.Books.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Book";
 }
 
-<h1>Edit</h1>
+<h1>Edit Book</h1>
 
 <h4>Book</h4>
 <hr />
