--- a/BookBorrowManagement/Pages/Users/Details.cshtml
+++ b/BookBorrowManagement/Pages/Users/Details.cshtml
@@ -2,10 +2,10 @@
 @model BookBorrowManagement.Pages.Users.DetailsModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "User Details";
 }
 
-<h1>Details</h1>
+<h1>User Details</h1>
 
 <div>
     <h4>User</h4>
