--- a/BookBorrowManagement/Pages/Books/Create.cshtml
+++ b/BookBorrowManagement/Pages/Books/Create.cshtml
@@ -2,10 +2,10 @@
 @model BookBorrowManagement.Pages.Books.CreateModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Book";
 }
 
-<h1>Create</h1>
+<h1>Create Book</h1>
 
 <h4>Book</h4>
 <hr />
