--- a/BookBorrowManagement/Pages/Index.cshtml
+++ b/BookBorrowManagement/Pages/Index.cshtml
@@ -6,5 +6,17 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">Intro page for example...Automatically generated...</a>.</p>
+    <p>Intro page for example...Automatically generated...</p>
+    <p>
+        <a asp-page="/Books/Index">See all books</a>
+    </p>
+    <p>
+        <a asp-page="/Books/Create">Create New Book</a>
+    </p>
+    <p>
+        <a asp-page="/Books/Delete">Delete book by ID</a>
+        <select asp-for="SelectedBookId" asp-items="Model.BookIDs">
+            <option value="">--</option>
+        </select>
+    </p>
 </div>
