--- a/BookBorrowManagement/Pages/Shared/_Layout.cshtml
+++ b/BookBorrowManagement/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Books/Index">See available books</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Users/Index">See available users</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,11 +20,11 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Books/Create">Create</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Return to home page</a>
                         </li>
-                        <li class="nav-item">
+@*                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Books/Delete">Delete</a>
-                        </li>
+                        </li> *@
                     </ul>
                 </div>
             </div>
