Initial CRUD creation for User_Book_Management

--- a/BookBorrowManagement/Pages/Shared/_Layout.cshtml
+++ b/BookBorrowManagement/Pages/Shared/_Layout.cshtml
@@ -22,9 +22,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Return to home page</a>
                         </li>
-@*                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Books/Delete">Delete</a>
-                        </li> *@
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Users_Books_Management/Index">Manage borrowments</a>
+                        </li>
                     </ul>
                 </div>
             </div>
