--- a/BookBorrowManagement/Pages/Books/Details.cshtml
+++ b/BookBorrowManagement/Pages/Books/Details.cshtml
@@ -2,10 +2,10 @@
 @model BookBorrowManagement.Pages.Books.DetailsModel
 
 @{
-    ViewData["Title"] = "Book Details";
+    ViewData["Title"] = "Details";
 }
 
-<h1>Book Details</h1>
+<h1>Details</h1>
 
 <div>
     <h4>Book</h4>
