--- a/BookBorrowManagement/Pages/Index.cshtml
+++ b/BookBorrowManagement/Pages/Index.cshtml
@@ -15,7 +15,7 @@
     </p>
     <form method="get" action="/Books/Delete">
         <p>Delete book by ID</p>
-        <select asp-items="Model.BookIDs" name="id"> @* asp-for="SelectedBookId" *@
+        <select asp-items="Model.BookIDs" name="id">
             <option value="">--</option>
         </select>
         <div class="form-group">
