--- a/BookBorrowManagement/Pages/Users/Index.cshtml
+++ b/BookBorrowManagement/Pages/Users/Index.cshtml
@@ -2,10 +2,10 @@
 @model BookBorrowManagement.Pages.Users.IndexModel
 
 @{
-    ViewData["Title"] = "Users";
+    ViewData["Title"] = "Index";
 }
 
-<h1>Users</h1>
+<h1>Index</h1>
 
 <p>
     <a asp-page="Create">Create New</a>
@@ -56,6 +56,5 @@
             </td>
         </tr>
 }
-        <p>Create new users or edit/delete existing ones...</p>
     </tbody>
 </table>
