--- a/BookBorrowManagement/Pages/Books/Edit.cshtml
+++ b/BookBorrowManagement/Pages/Books/Edit.cshtml
@@ -2,10 +2,10 @@
 @model BookBorrowManagement.Pages.Books.EditModel
 
 @{
-    ViewData["Title"] = "Edit Book";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Edit Book</h1>
+<h1>Edit</h1>
 
 <h4>Book</h4>
 <hr />
@@ -36,7 +36,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Book.Status" class="control-label"></label>
-                <select asp-for="Book.Status" class="form-control"></select>
+                <input asp-for="Book.Status" class="form-control" />
                 <span asp-validation-for="Book.Status" class="text-danger"></span>
             </div>
             <div class="form-group">
