--- a/BookBorrowManagement/Pages/Books/Index.cshtml
+++ b/BookBorrowManagement/Pages/Books/Index.cshtml
@@ -2,10 +2,10 @@
 @model BookBorrowManagement.Pages.Books.IndexModel
 
 @{
-    ViewData["Title"] = "Books";
+    ViewData["Title"] = "Index";
 }
 
-<h1>Books</h1>
+<h1>Index</h1>
 
 <p>
     <a asp-page="Create">Create New</a>
