--- a/BookBorrowManagement/Pages/Users/Create.cshtml
+++ b/BookBorrowManagement/Pages/Users/Create.cshtml
@@ -2,10 +2,10 @@
 @model BookBorrowManagement.Pages.Users.CreateModel
 
 @{
-    ViewData["Title"] = "Create User";
+    ViewData["Title"] = "Create";
 }
 
-<h1>Create User</h1>
+<h1>Create</h1>
 
 <h4>User</h4>
 <hr />
