--- a/BookBorrowManagement/Pages/Users/Delete.cshtml
+++ b/BookBorrowManagement/Pages/Users/Delete.cshtml
@@ -2,10 +2,10 @@
 @model BookBorrowManagement.Pages.Users.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete User";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>Delete User</h1>
+<h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
