New entity to track book borrow history added

--- a/BookBorrowManagement/Pages/Shared/_Layout.cshtml
+++ b/BookBorrowManagement/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Users_Books_Management/Index">Manage borrowments</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Users_Books_Management_History/Index">See history</a>
+                        </li>
                     </ul>
                 </div>
             </div>
