--- a/BookBorrowManagement/Pages/Users/Create.cshtml
+++ b/BookBorrowManagement/Pages/Users/Create.cshtml
@@ -2,10 +2,10 @@
 @model BookBorrowManagement.Pages.Users.CreateModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create new User";
 }
 
-<h1>Create</h1>
+<h1>@ViewData["Title"]</h1>
 
 <h4>User</h4>
 <hr />
