--- a/BookBorrowManagement/Pages/Users/Edit.cshtml
+++ b/BookBorrowManagement/Pages/Users/Edit.cshtml
@@ -2,10 +2,10 @@
 @model BookBorrowManagement.Pages.Users.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit selected User";
 }
 
-<h1>Edit</h1>
+<h1>@ViewData["Title"]</h1>
 
 <h4>User</h4>
 <hr />
