--- a/BookBorrowManagement/Pages/Users_Books_Management/Delete.cshtml
+++ b/BookBorrowManagement/Pages/Users_Books_Management/Delete.cshtml
@@ -2,10 +2,10 @@
 @model BookBorrowManagement.Pages.Users_Books_Management.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Existing Contract";
 }
 
-<h1>Delete</h1>
+<h1>@ViewData["Title"]</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
