--- a/BookBorrowManagement/Pages/Users_Books_Management/Details.cshtml
+++ b/BookBorrowManagement/Pages/Users_Books_Management/Details.cshtml
@@ -2,10 +2,10 @@
 @model BookBorrowManagement.Pages.Users_Books_Management.DetailsModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Details of contract";
 }
 
-<h1>Details</h1>
+<h1>@ViewData["Title"]</h1>
 
 <div>
     <h4>User_Book_Management</h4>
