--- a/BookBorrowManagement/Pages/Books/Edit.cshtml
+++ b/BookBorrowManagement/Pages/Books/Edit.cshtml
@@ -2,10 +2,10 @@
 @model BookBorrowManagement.Pages.Books.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit selected Book";
 }
 
-<h1>Edit</h1>
+<h1>@ViewData["Title"]</h1>
 
 <h4>Book</h4>
 <hr />
@@ -33,11 +33,6 @@
                 <label asp-for="Book.ReleaseDate" class="control-label"></label>
                 <input asp-for="Book.ReleaseDate" class="form-control" />
                 <span asp-validation-for="Book.ReleaseDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Book.Status" class="control-label"></label>
-                <input asp-for="Book.Status" class="form-control" />
-                <span asp-validation-for="Book.Status" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
