--- a/BookBorrowManagement/Pages/Users/Index.cshtml
+++ b/BookBorrowManagement/Pages/Users/Index.cshtml
@@ -2,13 +2,13 @@
 @model BookBorrowManagement.Pages.Users.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "List of Users";
 }
 
-<h1>Index</h1>
+<h1>@ViewData["Title"]</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Create New User</a>
 </p>
 <table class="table">
     <thead>
